Fix comment. Stream.toList()